--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 * {
-    box-sizing: border-box;
-width: 100%;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 body {
-    background-color: #2A2C24;
-    color: #FDFFFC;
-    font-family: "Poppins", serif;
+  background-color: #2a2c24;
+  color: #fdfffc;
+  font-family: "Poppins", serif;
   font-weight: 400;
   font-style: normal;
   margin: 0;
@@ -14,55 +14,58 @@ body {
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-h1, h2, h3, h4 {
-    color: #01BAEF;
-    margin: 0;
+h1,
+h2,
+h3,
+h4 {
+  color: #01baef;
+  margin: 0;
 }
 
 li {
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  text-align: center;
 }
 
 li.active {
-    color: #01BAEF;
+  color: #01baef;
 }
 
 /* Google Icons */
 
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;  /* Preferred icon size */
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: nowrap;
-    direction: ltr;
-  
-    /* Support for all WebKit browsers. */
-    -webkit-font-smoothing: antialiased;
-    /* Support for Safari and Chrome. */
-    text-rendering: optimizeLegibility;
-  
-    /* Support for Firefox. */
-    -moz-osx-font-smoothing: grayscale;
-  
-    /* Support for IE. */
-    font-feature-settings: 'liga';
-  }
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: "liga";
+}
